--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@
   .header-search-container .search-field {
     font-size: var(--fs-7);
     color: var(--onyx);
-    padding: 10px 15px;
+    padding: 10px 12px;
     padding-right: 50px;
     border: 1px solid var(--cultured);
     border-radius: var(--border-radius-md);
@@ -2629,9 +2629,12 @@
     }
   
   }
- .header-logo{
+  .header-logo{
     border-radius: 50%; 
     overflow: hidden; 
     margin-left: 100px;
   }
-  
+ #hi{
+  width: 100%;
+   height:auto; 
+ }
